package interfaces;

import items.Item;

public interface ItemActions {
    public void take(Item i);
    public void put(Item i);
}
