package ownable.locations.real.classes;

import ownable.locations.abstracts.classes.LocThrough;

public class GraveTrail extends LocThrough {

    public GraveTrail(String n) {
        super(n);
    }

}

