package ownable.locations.real.classes;

import ownable.locations.abstracts.classes.LocThrough;

public class Out extends LocThrough {

    public Out() {
        super("вне");
    }

}


