package ownable.locations.real.classes;

import ownable.locations.abstracts.classes.Loc;

public class Tombs extends Loc {


    public Tombs(String n) {
        super(n);
    }
}

