package utilites;

public class Randomizer {
    public static boolean chance(double i){
        return Math.random()>i;
    }
}
